Bug 544073 - further improvements - WIP
Change-Id: I07a5cd7f99554912164b062420609bcfc5ab6223